# turbomind-go

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeLists_simple.txt  Dockerfile  README.md  go.mod
.devcontainer/: Dockerfile  devcontainer.json
cpp_test/: simple_test.cpp
example/: example.go  example_test.go
pkg/turbomind/: engine.go  tokenizer.go  tokenizer_test.go  turbomind.go  turbomind_proper.go
script/: install-c++17.sh  install-cuda.sh  install-go.sh  install-lib.sh  install-vcpkg.sh
src/: turbomind_wrapper.cpp  turbomind_wrapper.hpp  turbomind_wrapper_hybrid.cpp  turbomind_wrapper_impl.cpp  turbomind_wrapper_minimal_test.cpp  turbomind_wrapper_proper.cpp  turbomind_wrapper_real.cpp  turbomind_wrapper_simplified.cpp
